--- a/nacos-discovery-provider/src/main/resources/application.yml
+++ b/nacos-discovery-provider/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
+  profiles:
+    active: company
   application:
     name: kxlove-nacos-provider
 server:
