--- a/spring-boot-kotlin/src/main/resources/application.properties
+++ b/spring-boot-kotlin/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.form
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
