add customhealth endpoint

--- a/spring-boot-kotlin/src/main/resources/application.properties
+++ b/spring-boot-kotlin/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.form
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+management.endpoints.web.exposure.include=*
+management.server.port=20018
+management.endpoints.web.base-path=/
